--- a/Front-end/Angular/kawamanga/src/app/components/card/card.component.html
+++ b/Front-end/Angular/kawamanga/src/app/components/card/card.component.html
@@ -1,48 +1,48 @@
 <main>
     <h1>漫 KAWA MANGA 画</h1>
     <section>
-        <article>
-            <img src="/assets/images/black-clover.png"><span>Black Clover</span>
-        </article>
-        <article>
-            <img src="/assets/images/my-hero-academia.jpg"><span>My Hero Academia</span>
-        </article>
-        <article>
-            <img src="/assets/images/fire-force.jpg"><span>Fire Force</span>
-        </article>
-        <article>
-            <img src="/assets/images/solo-leveling.jpg"><span>Solo Leveling</span>
-        </article>
-        <article>
-            <img src="/assets/images/dragon-ball.jpg"><span>Dragon Ball Super</span>
-        </article>
-        <article>
-            <img src="/assets/images/demon-slayer.png"><span>Demon Slayer</span>
-        </article>
-        <article>
-            <img src="/assets/images/tokyo-ghoul.jpg"><span>Tokyo Ghoul</span>
-        </article>
-        <article>
-            <img src="/assets/images/full-metal.jpg"><span>Full Metal</span>
-        </article>
-        <article>
-            <img src="/assets/images/one-punch.jpg"><span>One Punch</span>
-        </article>
-        <article>
-            <img src="/assets/images/one-piece.jpg"><span>One Piece</span>
-        </article>
-        <article>
-            <img src="/assets/images/snk.jpg"><span>Shingeki no Kyojin</span>
-        </article>
-        <article>
-            <img src="/assets/images/jujutsu-kaisen.jpg"><span>Jujustu Kaisen</span>
-        </article>
-        <article>
-            <img src="/assets/images/naruto.png"><span> Naruto</span>
-        </article>
-        <article>
-            <img src="/assets/images/seven.jpg"><span>Seven deadly sins</span>
-        </article>
+        <figure>
+            <img src="/assets/images/black-clover.png"><figcaption>Black Clover</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/my-hero-academia.jpg"><figcaption>My Hero Academia</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/fire-force.jpg"><figcaption>Fire Force</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/solo-leveling.jpg"><figcaption>Solo Leveling</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/dragon-ball.jpg"><figcaption>Dragon Ball Super</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/demon-slayer.png"><figcaption>Demon Slayer</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/tokyo-ghoul.jpg"><figcaption>Tokyo Ghoul</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/full-metal.jpg"><figcaption>Full Metal</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/one-punch.jpg"><figcaption>One Punch man</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/one-piece.jpg"><figcaption>One Piece</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/snk.jpg"><figcaption>Shingeki no Kyojin</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/jujutsu-kaisen.jpg"><figcaption>Jujustu Kaisen</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/naruto.png"><figcaption> Naruto</figcaption>
+        </figure>
+        <figure>
+            <img src="/assets/images/seven.jpg"><figcaption>Seven deadly sins</figcaption>
+        </figure>
 
     </section>
 </main>
