--- a/Front-end/Angular/kawamanga/src/app/components/card/card.component.css
+++ b/Front-end/Angular/kawamanga/src/app/components/card/card.component.css
@@ -23,7 +23,7 @@ img{
     box-shadow: 2px 2px 0px 0px #ffffff;
 }
 /* les titre sous les cartes */
-span{
+figcaption{
     vertical-align: middle;
     font-weight: bold;
     padding-left: 5px;
@@ -48,12 +48,12 @@ h1{
     
 }
 
-/* span:hover {
+/* figcaption:hover {
     transform: scale(1.2);
     z-index: 2;
 } */
 img:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     z-index: 2;
 
 }
@@ -81,7 +81,7 @@ img{
     box-shadow: 2px 2px 0px 0px #ffffff;
 }
 /* les titre sous les cartes */
-span{
+figcaption{
     vertical-align: middle;
     font-weight: bold;
     padding-left: 5px;
