--- a/Front-end/Angular/kawamanga/src/app/connexion/connexion.component.css
+++ b/Front-end/Angular/kawamanga/src/app/connexion/connexion.component.css
@@ -17,10 +17,11 @@ form{
  /* le badground de ma page */
 img#bg {
     position: absolute;
-    top: 115px;
+    top: 90px;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 220vh;
+    height: 100vh;
+    
 }
 
 
