--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/register/register.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/register/register.component.html
@@ -5,12 +5,13 @@
         <img src="/assets/images/93355430-256-k983346.jpg">
       </div>
       <div class="formBx">
-        <form>
+        <form [formGroup]="form">
           <h1>S'inscrire</h1>
-          <input type="text" name="" placeholder="Nom">
-          <input type="password" name="" placeholder="Mot de passe">
-          <input type="submit" name="" value="Connexion">
-          <p class="signup">Vous n'avez pas de compte ?<a href="#" onclick="toggleForm();"> S'inscrire</a></p>
+          <input type="text" formControlName="login" placeholder="Nom">
+          <input type="text" formControlName="email" placeholder="Email">
+          <input type="password" formControlName="password" placeholder="Mot de passe">
+          <input type="submit" value="Connexion" (click)="onSubmit()">
+          <!-- <p class="signup">Vous n'avez pas de compte ?<a href="#" onclick="toggleForm();"> S'inscrire</a></p> -->
         </form>
       </div>
     </div>
