--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/register/register.component.css
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/register/register.component.css
@@ -100,7 +100,7 @@ section .container .user .formBx form input[type="submit"] {
 }
 
 section .container .user .formBx form input[type="submit"]:hover {
-    background: #38ACEC;
+    background: #FEE648;
 }
 
 section .container .user .formBx form .signup {
