--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/footer/footer.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/footer/footer.component.html
@@ -2,9 +2,10 @@
 
 
 
-    <div class="text-center p-3 fixed-bottom" style="background-color: #e30e24;">
-      © 2023 Copyright: Fait par Bakari.K 
-      
-    </div>
-    
-  </footer>
+  <div class="text-center p-3 fixed-bottom" style="background-color: #e30e24;">
+    <!-- <p>© 2023 Copyright: Fait par Bakari.K </p> -->
+    <a routerLink="/cgu.component.html" target="_blank" rel="noopener noreferrer">Conditions Générales d'Utilisation</a>
+    <a routerLink="/rgpd.component.html"target="_blank" rel="noopener noreferrer">Politique de confidentialité</a>
+  </div>
+  
+</footer>
