--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/home/home.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h1>漫 KAWA MANGA 画</h1>
+<!-- <h1>漫 KAWA MANGA 画</h1> -->
 <br /><br />
   <div class="container">
 
@@ -76,7 +76,7 @@
         <br />
         <div class="card">
           <div class="card-body">
-            <h5>Présentation</h5>
+            <h5>Le manga fait référence aux bandes dessinées japonaises, dont la série est souvent transformée en anime.</h5>
             <hr />
             <div class="ratio ratio-16x9">
               <video controls src="/assets/images/TOP 10 MEILLEURS ANIMÉS DE TOUS LES TEMPS ! QUE VOUS DEVEZ ABSOLUMENT REGARDER partie 2.mp4" title="YouTube video" allowfullscreen></video>
@@ -84,10 +84,10 @@
           </div>
         </div>
 
+ </div>
 
 
-
-      </div>
+     
     
     <!-- <app-root></app-root> -->
 
