--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/login/login.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/login/login.component.html
@@ -3,11 +3,11 @@
     <input type="checkbox" id="chk" aria-hidden="true">
 
     <div class="signup">
-      <form>
+      <form [formGroup]="formLogin">
         <label for="chk" aria-hidden="true">Connexion</label>
-        <input type="text" name="txt" placeholder="Nom" required="">
-        <input type="password" name="pswd" placeholder="Mot de passe" required="">
-        <button>Connexion</button>
+        <input type="text" formControlName="email" placeholder="Email" required="">
+        <input type="password" formControlName="password" placeholder="Mot de passe" required="">
+        <button (click)="onSubmit()">Connexion</button>
       </form>
     </div>
 
