--- a/Projet-perso/MyProject/MyProject_client-main/src/app/component/cgu/cgu.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/component/cgu/cgu.component.html
@@ -7,36 +7,35 @@
 </head>
 
 <body>
-  <h1>Conditions Générales d'Utilisation (CGU) pour le blog Kawamanga</h1>
+  <h4>Conditions Générales d'Utilisation (CGU) pour le blog Kawamanga</h4>
 
-  <p>Bienvenue sur le blog Kawamanga. Ce document décrit les conditions générales d'utilisation (CGU) du blog Kawamanga, disponible sur le site web <a href="https://www.kawamanga.com">https://www.kawamanga.com</a>.</p>
-
-  <p>En utilisant le blog Kawamanga, vous acceptez les termes et conditions énoncés dans ce document. Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser le blog Kawamanga.</p>
-
-  <h2>1. Utilisation du blog Kawamanga</h2>
-
+  <p class="Bienvenue">Bienvenue sur le blog Kawamanga. Ce document décrit les conditions générales d'utilisation (CGU) du blog Kawamanga.
+    En utilisant le blog Kawamanga, vous acceptez les termes et conditions énoncés dans ce document. Si vous n'acceptez pas ces conditions, veuillez ne pas utiliser le blog Kawamanga.</p>
+<ol>
+  <strong>1.Utilisation du blog Kawamanga</strong>
   <p>Le blog Kawamanga est un site web accessible au public. En utilisant le blog Kawamanga, vous vous engagez à ne pas utiliser ce site à des fins illégales, immorales, nuisibles ou désobligeantes envers d'autres utilisateurs. Vous vous engagez également à ne pas perturber le fonctionnement normal du blog Kawamanga ou des autres utilisateurs du site.</p>
 
-  <h2>2. Propriété intellectuelle</h2>
+  <strong>2. Propriété intellectuelle</strong>
 
   <p>Le contenu du blog Kawamanga, y compris mais non limité aux textes, graphiques, images, logos, marques de commerce, vidéos, fichiers audio, codes et logiciels, est la propriété de Kawamanga ou de ses propriétaires respectifs. L'utilisation non autorisée de ce contenu peut constituer une violation des lois sur la propriété intellectuelle.</p>
 
-  <h2>3. Commentaires des utilisateurs</h2>
+  <strong>3. Commentaires des utilisateurs</strong>
 
   <p>Le blog Kawamanga permet aux utilisateurs de laisser des commentaires sur les publications. Toutefois, les commentaires qui contiennent des propos diffamatoires, injurieux, discriminatoires, racistes ou offensants seront supprimés. Les utilisateurs qui ne respectent pas ces règles peuvent être bannis du site.</p>
 
-  <h2>4. Responsabilité</h2>
+  <strong>4. Responsabilité</strong>
 
   <p>Kawamanga ne garantit pas l'exactitude, l'exhaustivité, la pertinence ou la disponibilité des informations ou du contenu affiché sur le blog Kawamanga. L'utilisation du blog Kawamanga se fait à vos risques et périls.</p>
 
-  <h2>5. Modification des CGU</h2>
+  <strong>5. Modification des CGU</strong>
 
   <p>Kawamanga se réserve le droit de modifier ces CGU à tout moment et sans préavis. Les modifications apportées aux CGU seront publiées sur le blog Kawamanga. Il est de votre responsabilité de consulter régulièrement les CGU pour vous assurer que vous êtes en conformité avec les termes et conditions actuels.</p>
 
-  <h2>6. Loi applicable et juridiction compétente</h2>
+  <strong>6. Loi applicable et juridiction compétente</strong>
+
 
   <p>Les présentes CGU sont régies par les lois de France et tout litige lié aux présentes sera de la compétence exclusive des tribunaux français.</p>
-   
+   </ol>
 </body>
  
  
