--- a/Projet-perso/MyProject/MyProject_client-main/src/app/component/rgpd/rgpd.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/component/rgpd/rgpd.component.html
@@ -1,34 +1,34 @@
-<h1>Politique de confidentialité RGPD pour le blog Kawamanga</h1>
+<h4>Politique de confidentialité RGPD pour le blog Kawamanga</h4>
 
-<h2>Introduction</h2>
+<strong>Introduction</strong>
 
 <p>Cette politique de confidentialité explique comment nous, sur le blog Kawamanga, collectons, utilisons, stockons et protégeons les informations que vous nous fournissez lorsque vous utilisez notre site. Nous respectons votre vie privée et nous nous engageons à protéger les informations que vous nous fournissez.</p>
 
-<h2>Les informations que nous collectons</h2>
+<strong>Les informations que nous collectons</strong>
 
 <p>Nous collectons des informations personnelles telles que votre nom et votre adresse e-mail lorsque vous vous abonnez à notre newsletter ou que vous nous envoyez un message via notre formulaire de contact. Nous collectons également des informations telles que votre adresse IP, votre navigateur et les pages que vous consultez sur notre site à des fins d'analyse et d'amélioration de notre site.</p>
 
-<h2>Utilisation des informations</h2>
+<strong>Utilisation des informations</strong>
 
 <p>Nous utilisons les informations que vous nous fournissez pour vous envoyer notre newsletter si vous vous êtes abonné, pour répondre à vos messages envoyés via notre formulaire de contact, et pour améliorer notre site en comprenant comment nos visiteurs naviguent sur le site. Nous ne partageons pas vos informations avec des tiers.</p>
 
-<h2>Stockage des informations</h2>
+<strong>Stockage des informations</strong>
 
 <p>Nous stockons les informations que vous nous fournissez dans notre système de gestion de contenu sécurisé et dans notre compte de messagerie électronique. Nous stockons également les informations collectées lors de votre visite sur notre site dans nos fichiers de journal de serveur. Nous conservons vos informations aussi longtemps que nécessaire pour répondre à vos demandes et pour nous conformer à nos obligations légales.</p>
 
-<h2>Protection des informations</h2>
+<strong>Protection des informations</strong>
 
 <p>Nous prenons des mesures pour protéger vos informations personnelles contre toute perte, vol, accès non autorisé, divulgation, altération ou destruction. Nous utilisons des méthodes de sécurité raisonnables pour protéger vos informations, notamment le chiffrement des données, l'accès restreint aux informations personnelles, et la surveillance régulière de nos systèmes de sécurité.</p>
 
-<h2>Vos droits</h2>
+<strong>Vos droits</strong>
 
 <p>Vous avez le droit de demander l'accès à vos informations personnelles, de demander la rectification ou la suppression de vos informations, ou de vous opposer au traitement de vos informations. Vous pouvez également retirer votre consentement à tout moment pour le traitement de vos informations.</p>
 
-<h2>Modifications de la politique de confidentialité</h2>
+<strong>Modifications de la politique de confidentialité</strong>
 
 <p>Nous pouvons modifier cette politique de confidentialité de temps à autre en mettant à jour cette page. Nous vous encourageons à consulter régulièrement cette page pour rester informé des modifications apportées à cette politique de confidentialité.</p>
 
-<h2>Contact</h2>
+<strong>Contact</strong>
 
 <p>Si vous avez des questions ou des préoccupations concernant cette politique de confidentialité, ou si vous souhaitez exercer vos droits en vertu du RGPD, veuillez nous contacter à l'adresse suivante : [insérer votre adresse e-mail de contact].</p>
 
