--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/footer/footer.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/footer/footer.component.html
@@ -4,8 +4,10 @@
 
   <div class="text-center p-3 fixed-bottom" style="background-color: #e30e24;">
     <!-- <p>© 2023 Copyright: Fait par Bakari.K </p> -->
-    <a routerLink="/cgu.component.html" target="_blank" rel="noopener noreferrer">Conditions Générales d'Utilisation</a>
-    <a routerLink="/rgpd.component.html"target="_blank" rel="noopener noreferrer">Politique de confidentialité</a>
+    
+    <a id="top-btn" *ngIf="showBtn$ | async"class="to-top" (click)="gotoTop()"> </a>
+    <a routerLink="/CGU" target="_blank" rel="noopener noreferrer">Conditions Générales d'Utilisation</a>
+    <a routerLink="/rgpd"target="_blank" rel="noopener noreferrer">Politique de confidentialité</a>
   </div>
   
 </footer>
