--- a/Projet-perso/MyProject/MyProject_client-main/src/app/components/home/home.component.html
+++ b/Projet-perso/MyProject/MyProject_client-main/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-8">
 
-        
+        {{posts}}
 
         <div class="card mb-3" *ngFor="let post of posts">
           <img src="/assets/images/mangaka.jpg" class="card-img-top" alt="image manga">
